Agregado de Boostrap y armado basico de la wab responsive

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,20 @@
 .App-link {
   color: #09d3ac;
 }
+
+
+.App-myCarousel{
+  background-color: darkgreen;
+  min-height: 100vh;
+}
+
+.App-myCard{
+  background-color: coral;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
