--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,20 @@
 }
 
 
-.App-myCarousel{
-  background-color: darkgreen;
-  min-height: 100vh;
-}
-
 .App-myCard{
   background-color: coral;
-  min-height: 100vh;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-myForm{
+  background-color: rgb(255, 181, 71);
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
